--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,17 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "zero2prod"
+path = "src/lib.rs"
+
+[[bin]]
+name = "zero2prod"
+path = "src/main.rs"
+
+[dev-dependencies]
+reqwest = "0.11"
+
 [dependencies]
+actix-web = "4"
+tokio = { version = "1", features = ["full"] }
